--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <link rel="stylesheet" href="index.css">
     <script   src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script>
     <script src="index.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
+<div class="text">Rhône wine region</div>
 <div class="root"></div>
   
 </body>
